# rust_workshop

./: .gitignore  README.md  slides.org
argparse/: Cargo.toml
argparse/src/: lib.rs
code/: 1.rs  11.rs  13a.rs  13b.rs  13c.rs  14.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8a.rs  8b.rs  Cargo.toml
projects/ur_mom/: Cargo.toml
projects/ur_mom/src/: main.rs
