[package]
name = "argparse_samples"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Liu"]
description = "simple argparser created for CSC rust workshop"
repository = "https://github.com/MrPicklePinosaur/rust_workshop"
license = "MIT OR Apache-2.0"

[[bin]]
name = "1"
path = "1.rs"

[[bin]]
name = "2"
path = "2.rs"

[[bin]]
name = "3"
path = "3.rs"

[[bin]]
name = "4"
path = "4.rs"

[[bin]]
name = "5"
path = "5.rs"

[[bin]]
name = "6"
path = "6.rs"

[[bin]]
name = "7"
path = "7.rs"

[[bin]]
name = "8a"
path = "8a.rs"

[[bin]]
name = "8b"
path = "8b.rs"

[dependencies]